revisi tugas 2
